Fix layout issue

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ p {
 #content-body {
     margin-top: 132px;
     padding: 0 16%;
-    min-width: 1200px;
+    min-width: 700px;
 }
 
 /* 
